--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Uploads a single webpackage into a Cubbles Base.",
   "author": "Judit Ross <judit.ross@incowia.com>",
   "contributors": [
-    "Hd Böhlau <hans-dieter.boehlau@incowia.com>"
+    "HD Böhlau <hans-dieter.boehlau@getrequest.de>"
   ],
   "license": "Apache-2.0",
   "main": "./lib/uploader.js",
@@ -25,24 +25,23 @@
     "preversion": "npm run lint",
     "lint": "eslint lib bin test *.js",
     "start": "node ./bin/uploadWebpackage",
-    "test": "mocha",
-    "generate-docs": "node_modules/.bin/jsdoc.cmd -c jsDocConf.json -R ./README.md"
+    "test": "mocha"
   },
   "dependencies": {
     "chalk": "~1.1.0",
     "cubx-authentication-client": "^1.1.0",
     "cubx-webpackage-document-api": "^3.0.0",
     "fs": "^0.0.2",
-    "https-proxy-agent": "^1.0.0",
     "http-proxy-agent": "^1.0.0",
+    "https-proxy-agent": "^1.0.0",
     "lodash": "^3.10",
     "mime": "^1.2.11",
+    "multi-glob": "1.0.1",
     "nano": "^6.0.2",
     "promise": "^7.0.4",
     "url-join": "^0.0.1",
     "walk": "^2.3.4",
-    "yargs": "^3.15.0",
-    "multi-glob": "1.0.1"
+    "yargs": "^3.15.0"
   },
   "devDependencies": {
     "chai": "^3.4.0",
@@ -50,8 +49,6 @@
     "eslint-config-standard": "^4.4.0",
     "eslint-plugin-promise": "^3.4.2",
     "eslint-plugin-standard": "^1.3.1",
-    "ink-docstrap": "^0.4.12",
-    "jsdoc": "^3.3.0-alpha10",
     "mocha": "^2.1.0",
     "sinon": "~1.12.2",
     "standard": "^5.4.1",
