--- a/package.json
+++ b/package.json
@@ -32,27 +32,27 @@
     "cubx-authentication-client": "^1.1.0",
     "cubx-webpackage-document-api": "^3.0.0",
     "fs": "^0.0.2",
-    "http-proxy-agent": "^1.0.0",
-    "https-proxy-agent": "^1.0.0",
-    "lodash": "^3.10",
+    "http-proxy-agent": "^2.1.0",
+    "https-proxy-agent": "^2.2.1",
+    "lodash": "^4.17.11",
     "mime": "^1.2.11",
-    "multi-glob": "1.0.1",
+    "multi-glob": "^1.0.2",
     "nano": "^6.0.2",
     "promise": "^7.0.4",
     "url-join": "^0.0.1",
-    "walk": "^2.3.4",
+    "walk": "^2.3.14",
     "yargs": "^3.15.0"
   },
   "devDependencies": {
-    "chai": "^3.4.0",
-    "eslint": "^1.10.3",
-    "eslint-config-standard": "^4.4.0",
-    "eslint-plugin-promise": "^3.4.2",
-    "eslint-plugin-standard": "^1.3.1",
-    "mocha": "^2.1.0",
-    "sinon": "~1.12.2",
-    "standard": "^5.4.1",
-    "superagent": "^1.4.0",
+    "chai": "^4.2.0",
+    "eslint": "^5.12.0",
+    "eslint-config-standard": "^12.0.0",
+    "eslint-plugin-promise": "^4.0.1",
+    "eslint-plugin-standard": "^4.0.0",
+    "mocha": "^5.2.0",
+    "sinon": "^7.2.2",
+    "standard": "^12.0.1",
+    "superagent": "^4.1.0",
     "supercouch": "^0.2.4",
     "time-grunt": "~1.0.0"
   }
