--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
   },
   "devDependencies": {
     "chai": "^4.2.0",
+    "couch-slouch": "^1.0.5",
     "eslint": "^5.12.0",
     "eslint-config-standard": "^12.0.0",
     "eslint-plugin-promise": "^4.0.1",
@@ -53,7 +54,6 @@
     "sinon": "^7.2.2",
     "standard": "^12.0.1",
     "superagent": "^4.1.0",
-    "supercouch": "^0.2.4",
     "time-grunt": "~1.0.0"
   }
 }
