cubx-webpackage-uploader-4 Eliminate vulnerability issues - use couch-slouch instead supercouch

--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "multi-glob": "^1.0.2",
     "nano": "^6.0.2",
     "promise": "^7.0.4",
+    "prune": "0.0.2",
     "url-join": "^0.0.1",
     "walk": "^2.3.14",
     "yargs": "^3.15.0"
